[gd_scene load_steps=4 format=3 uid="uid://dnqv31frrxf8d"]

[ext_resource type="Texture2D" uid="uid://bxg8rfq0f4cl4" path="res://source/player/jerald.png" id="1_17s4a"]
[ext_resource type="Script" path="res://source/player/player.gd" id="1_y6p4g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aa3ho"]
size = Vector2(8, 15)

[node name="player" type="CharacterBody2D" groups=["entity"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_y6p4g")

[node name="Jerald" type="Sprite2D" parent="."]
texture = ExtResource("1_17s4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_aa3ho")

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2(3, 3)

[node name="jump_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="submit" type="Button" parent="CanvasLayer/Control"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_bottom = 43.0
grow_horizontal = 0
text = "import"

[connection signal="timeout" from="jump_timer" to="." method="_on_jump_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Control/submit" to="." method="_on_button_pressed"]
